# secure-cleanup-toolkit

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  DEPLOYMENT_SUCCESS.md  FINAL_VERIFICATION_SUMMARY.md  LICENSE  PUBLISH_STATUS.md  PUBLISH_SUCCESS.md  QUICK_PUBLISH.md  README.md  SECURE_CLEANUP_SUMMARY.md  SECURITY.md  cleanup_report.txt  publish_report.txt  pyproject.toml  verification_report.txt
.github/: release_template.md
.github/workflows/: ci.yml
backup/cleanup_20251201_053425/docs/wiki/: CI-CD-Integration.md  Configuration-Reference.md
configs/: cleanup.yaml  default.yaml  model_baselines.yaml
data/interim/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: ADVANCED_USAGE.md  DATASET_CARD.md  ETHICS.md  EXPERIMENTS.md  GIT_WORKFLOW.md  MODEL_CARD.md  PUBLISH.md
docs/wiki/: CI-CD-Integration.md  Configuration-Reference.md  Usage-Guide.md
notebooks/: 00_exploration.ipynb
scripts/: augment_preview.py  extract_frames.py  final_publish_check.py  final_verification.py  generate_dummy_data.py  infer_folder.py  secure_cleanup.py  split_dataset.py
src/: __init__.py  cli.py  evaluate.py  explain.py  train.py
src/data/: __init__.py  dataset.py  transforms.py
src/models/: __init__.py  backbones.py  builder.py
src/utils/: __init__.py  export.py  io.py  logging.py  metrics.py  seed.py  validation.py  visualization.py
tests/: test_cli.py  test_dataset.py  test_metrics.py  test_transforms.py  test_validation.py  test_yaml_schema.py
tests/schema/: default_schema.py
